fixed login interface logic, jwt token, redis cache,